game complete without score

--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <canvas id="canvas" style="border: 1px solid;"></canvas>
     <div class="right-section">
       <h1>Tetris</h1>
+      <p>Score: <span id="score">0</span></p>
       <p>Controls</p>
       <button id="play-game">Play</button>
     </div>
