--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/3d869d24b6.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
@@ -12,7 +13,27 @@
     <div class="right-section">
       <h1>Tetris</h1>
       <p>Score: <span id="score">0</span></p>
-      <p>Controls</p>
+      <div class="controls">
+        <p>Controls</p>
+        <div class="controls-right">
+          <div>
+            <i class="fa-solid fa-arrow-up"></i>
+            <p>Rotate</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-arrow-left"></i>
+            <p>Move Left</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-arrow-right"></i>
+            <p>Move Right</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-arrow-down"></i>
+            <p>Move Down</p>
+          </div>
+        </div>
+      </div>
       <button id="play-game">Play</button>
     </div>
   </div>
