added drop piece function

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tetris Clone</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/3d869d24b6.js" crossorigin="anonymous"></script>
 </head>
@@ -31,6 +31,10 @@
           <div>
             <i class="fa-solid fa-arrow-down"></i>
             <p>Move Down</p>
+          </div>
+          <div>
+            <p>[Space]</p>
+            <p>Drop</p>
           </div>
         </div>
       </div>
