created hold piece function and some styling

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <canvas id="canvas" style="border: 1px solid;"></canvas>
+    <canvas id="canvas" style="border: 1px solid black;"></canvas>
     <div class="right-section">
       <h1>Tetris</h1>
       <p>Score: <span id="score">0</span></p>
