--- a/main.html
+++ b/main.html
@@ -36,6 +36,10 @@
             <p>[Space]</p>
             <p>Drop</p>
           </div>
+          <div>
+            <p>[C]</p>
+            <p>Hold</p>
+          </div>
         </div>
       </div>
       <button id="play-game">Play</button>
