pouch rendering and bug fixes

--- a/main.html
+++ b/main.html
@@ -13,8 +13,12 @@
     <div class="right-section">
       <h1>Tetris</h1>
       <p>Score: <span id="score">0</span></p>
+      <div class="piece-pouch">
+        <p>Hold:</p>
+        <canvas id="canvas-2"></canvas>
+      </div>
       <div class="controls">
-        <p>Controls</p>
+        <p>Controls:</p>
         <div class="controls-right">
           <div>
             <i class="fa-solid fa-arrow-up"></i>
