styles, added clear board and bug fixes

--- a/main.html
+++ b/main.html
@@ -46,7 +46,10 @@
           </div>
         </div>
       </div>
-      <button id="play-game">Play</button>
+      <div class="buttons">
+        <button id="play-game">Play</button>
+        <button id="clear-board">Clear Board</button>
+      </div>
     </div>
   </div>
   <script src="js/board.js"></script>
